// 定义项目 API 的 proto 文件 可以同时描述 gRPC 和 HTTP API
// protobuf 文件参考:
//  - https://developers.google.com/protocol-buffers/
syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/empty.proto";

// package 命名使用 {appid}.{version} 的方式, version 形如 v1, v2 ..
package delayer.service.v1;

// NOTE: 最后请删除这些无用的注释 (゜-゜)つロ

option go_package = "api";
option (gogoproto.goproto_getters_all) = false;

enum ErrCode {
  OK = 0;
  PushJobFail = 400;
}

service GoDelayer {
  rpc Ping(.google.protobuf.Empty) returns (.google.protobuf.Empty);
  rpc PushJob(Job) returns (.google.protobuf.Empty);
  rpc PopJob(Topic) returns (Job);
  rpc RemoveJob(JobID) returns (RemoveJobResp);
}

message Job{
  string Topic = 1 [(gogoproto.moretags) = 'form:"topic" validate:"required"'];
  string ID = 2 [(gogoproto.moretags) = 'form:"id" validate:"required"'];
  int64  Delay = 3 [(gogoproto.moretags) = 'form:"delay" validate:"required"'];
  string Body = 4 [(gogoproto.moretags) = 'form:"id" validate:"required"'];
  int64  TTR = 5 [(gogoproto.moretags) = 'form:"delay"'];
}

message Topic{
  string Topic = 1 [(gogoproto.moretags) = 'form:"topic" validate:"required"'];
}

message JobID{
  string ID = 1 [(gogoproto.moretags) = 'form:"id" validate:"required"'];
}

message RemoveJobResp{
  bool removed = 1  [(gogoproto.jsontag) = 'removed'];
}